--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
         <th>TITLE</th>
         <th>DESCRIPTION</th>
         <th>AUTHOR</th>
-        <th>ACTION</th>
+        <th colspan="3">ACTION</th>
     </tr>
     <tbody>
         <% @articles.each do |article| %>
@@ -14,9 +14,15 @@
             <td><%= article.title %></td>
             <td><%= article.description %></td>
             <td><%= article.author %></td>
-            <td>Placeholder</td>
+            
+            <td><%= link_to 'Show', article_path(article) %></td>
+            <td><%= link_to 'Edit', edit_article_path(article) %></td>
+            <td><%= link_to 'Delete', article_path(article), data:{turbo_method: :delete, turbo_confirm: "Are you sure?"}%></td>
         </tr>
 
     </tbody>
     <% end %>
 </table>
+<p>
+    <%= link_to 'Create Article', new_article_path %>
+</p>
