--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,42 +1,5 @@
 <h1>Create New Article Page</h1>
 
-<% if @article.errors.any? %>
-
-    <h2>The Following Errors Prevented the Article from beiving saved</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-
-            <li>
-                <%= msg %>
-            </li>
-
-        <% end %>
-    </ul>
-
-    
-<% end %>
-
-<%= form_with scope: :article, url:articles_path, local: true do |f| %>
-
-<p>
-    <%= f.label :title %> <br/>
-    <%= f.text_field :title %>
-</p>
-
-<p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-</p>
-
-<p>
-    <%= f.label :author %><br/>
-    <%= f.text_field :author %>
-</p>
-
-<p>
-    <%= f.submit %>
-</p>
-
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Return to Articles List', articles_path %>
