--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,40 +1,40 @@
+<div class="container">
+<div class="row justify-content-center">
+    <div class="col-10" >
+        <%= render "shared/errors" %>
+<%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded",local: true)  do |f| %>
 
-<% if @article.errors.any? %>
+<div class="form-group row">
+    <%= f.label :title, class: "col-2 col-form-label text-white" %> 
+    <div class="col-10">
+    <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of Article" %>
+</div>
+</div>
 
-    <h2>The Following Errors Prevented the Article from beiving saved</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
+<div class="form-group row">
+    <%= f.label :description, class: "col-2 col-form-label text-white"  %>
+        <div class="col-10">
+            <%= f.text_area :description, rows:8, class: "form-control shadow rounded", placeholder: "Description of Article" %>
+        </div>
+</div>
 
-            <li>
-                <%= msg %>
-            </li>
+<div class="form-group row">
+    <%= f.label :author, class: "col-2 col-form-label text-white" %>
 
-        <% end %>
-    </ul>
+    <div class="col-10">
+        <%= f.text_field :author, class: "form-control shadow rounded", placeholder: "Name of author" %>
+    </div>
+</div>
 
-    
-<% end %>
-
-<%= form_with(model: @article, local: true)  do |f| %>
-
-<p>
-    <%= f.label :title %> <br/>
-    <%= f.text_field :title %>
-</p>
-
-<p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-</p>
-
-<p>
-    <%= f.label :author %><br/>
-    <%= f.text_field :author %>
-</p>
-
-<p>
-    <%= f.submit %>
-</p>
+    <div class="form-group row justify-content-center">
+    <%= f.submit class:"btn btn-outline-success text-center text-white" %>
+    </div>
 
 <% end %> 
+    </div>
+    <div class="mb-3">
+    <%= link_to '[Cancel and Return to Articles List]', articles_path, class: "text-info" %>
+</div>
+</div>
+</div>
 
