--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,2 @@
-<h1>Edit Article Page</h1>
-
+    <h1 class="text-center mt-4">Edit Articles</h1>
 <%= render 'form' %>
-
-<%= link_to 'Cancel and return to Articles List', articles_path %>
