--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,29 @@
-<h1>Articles Listing Page</h1>
 
-<table>
+<h1 class="text-center mt-4">All Articles</h1>
+<div class="container">
+<% @articles.each do |article| %>
+<div class="row justify-content-md-center">
+<div class="col-8 mt-4">
+  <div class="card text-center shadow mb-5 bg-body-tertiary rounded">
+    <div class="card-header"> Published By:
+        <%= article.author %>
+    </div>
+    <div class="card-body">
+    <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
+    <p class="card-text"><%= truncate(article.description, length:100) %></p>
+    <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
     
-    <tr>
-        <th>TITLE</th>
-        <th>DESCRIPTION</th>
-        <th>AUTHOR</th>
-        <th colspan="3">ACTION</th>
-    </tr>
-    <tbody>
-        <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= article.author %></td>
-            
-            <td><%= link_to 'Show', article_path(article) %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Delete', article_path(article), data:{turbo_method: :delete, turbo_confirm: "Are you sure?"}%></td>
-        </tr>
+    <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-success" %>
 
-    </tbody>
-    <% end %>
-</table>
-<p>
-    <%= link_to 'Create Article', new_article_path %>
-</p>
+    <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+    </div>
+    <div class="card-footer text-muted">
+        <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+    </div>
+</div>
+</div>
+</div>
+  <% end %>
+</div>
+
+
