--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,2 @@
-<h1>Create New Article Page</h1>
-
+    <h1 class="text-center mt-4">Create New Article</h1>
 <%= render 'form' %>
-
-<%= link_to 'Return to Articles List', articles_path %>
